--- a/shared_styles.css
+++ b/shared_styles.css
@@ -1,16 +1,20 @@
-h1, h2, h3, h4 {
-  font-family: Garamond, "Times New Roman", serif;
+.underline {
+  text-decoration: underline;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: Garamond, "Times New Roman", Times, serif;
 }
 
 nav {
-  font-family: Constantia, "Times New Roman", serif;
+  font-family: Constantia, "Times New Roman", Times, serif;
 }
 
 body {
-  font-family: Georgia, "Times New Roman", serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-footer {
+footer, code {
   font-family: "Courier New", Courier, monospace;
 }
 
