Minor QOL changes

--- a/shared_styles.scss
+++ b/shared_styles.scss
@@ -3,7 +3,7 @@ $font-nav: Constantia, "Times New Roman", Times, serif;
 $font-body: Georgia, "Times New Roman", Times, serif;
 $font-footer: "Courier New", Courier, monospace;
 
-.underline {
+.text-decoration-underline {
     text-decoration: underline;
 }
 
